force-app/main/default/objects/ccrz__E_BreadCrumb__c/ccrz__E_BreadCrumb__c.object-meta.xml
<CustomObject>
    <description>A flattened table listing the drill down path to each category for each locale. This is used to construct the category tree.</description>
    <label>CC BreadCrumb</label>
    <nameField>
        <label>BreadCrumb Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC BreadCrumbs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>