force-app/main/default/objects/ccrz__E_BreadCrumb__c/fields/ccrz__BreadCrumbId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BreadCrumbId__c</fullName>
    <description>External Id autonumber for breadcrumb</description>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>BreadCrumb Id</label>
    <type>AutoNumber</type>
</CustomField>