force-app/main/default/objects/ccrz__E_BreadCrumb__c/fields/ccrz__BreadcrumbURL__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BreadcrumbURL__c</fullName>
    <label>Breadcrumb URL</label>
    <type>TextArea</type>
</CustomField>