force-app/main/default/objects/ccrz__E_BreadCrumb__c/fields/ccrz__BreadCrumbWithLocale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BreadCrumbWithLocale__c</fullName>
    <label>BreadCrumbWithLocale</label>
    <type>TextArea</type>
</CustomField>