force-app/main/default/objects/ccrz__E_BreadCrumb__c/fields/ccrz__CategoryId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CategoryId__c</fullName>
    <label>Category Id</label>
    <type>TextArea</type>
</CustomField>