force-app/main/default/objects/ccrz__E_BreadCrumb__c/fields/ccrz__CategoryName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CategoryName__c</fullName>
    <label>Category Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>