force-app/main/default/objects/ccrz__E_BreadCrumb__c/fields/ccrz__TopLevelFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TopLevelFlag__c</fullName>
    <label>TopLevel Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>