force-app/main/default/objects/ccrz__E_BreadCrumb__c/fields/ccrz__TopLevelIndex__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TopLevelIndex__c</fullName>
    <label>TopLevel Index</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>