force-app/main/default/objects/ccrz__E_BreadCrumb__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__Breadcrumb__c</columns>
    <columns>ccrz__BreadcrumbURL__c</columns>
    <columns>ccrz__BreadCrumbWithLocale__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>